Some fixes to work with desktop version with JDK 21