@@ -213,9 +213,9 @@
                                 <configuration>
                                     <moduleName>${desktop}</moduleName>
                                     <systemProperties>
-                                        <jakarta.xml.parsers.SAXParserFactory>
+                                        <javax.xml.parsers.SAXParserFactory>
                                             org.apache.xerces.jaxp.SAXParserFactoryImpl
-                                        </jakarta.xml.parsers.SAXParserFactory>
+                                        </javax.xml.parsers.SAXParserFactory>
                                     </systemProperties>
                                 </configuration>
                                 <goals>
@@ -315,12 +315,24 @@
                         <artifactId>spring-boot-maven-plugin</artifactId>
                         <version>${version.springboot}</version>
                         <configuration>
+                            <environmentVariables>
+                                <SOLR_ZOOKEEPER_HOSTS>localhost:9983</SOLR_ZOOKEEPER_HOSTS>
+                            </environmentVariables>
+                            <additionalClasspathElements>
+                                <additionalClasspathElement>
+                                    ${project.build.directory}/${project.build.finalName}
+                                </additionalClasspathElement>
+                            </additionalClasspathElements>
                             <jvmArguments>
-                                -Djava.net.preferIPv4Stack=true
-                                -Djakarta.xml.parsers.SAXParserFactory=org.apache.xerces.jaxp.SAXParserFactoryImpl
-                                -Djakarta.xml.parsers.DocumentBuilderFactory=org.apache.xerces.jaxp.DocumentBuilderFactoryImpl
                                 -Dgwt.codeServerPort=9876 -Xdebug
-                                -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Denv=desktop
+                                -Djava.net.preferIPv4Stack=true
+                                -Djavax.xml.parsers.SAXParserFactory=org.apache.xerces.jaxp.SAXParserFactoryImpl
+                                -Djavax.xml.parsers.DocumentBuilderFactory=org.apache.xerces.jaxp.DocumentBuilderFactoryImpl
+                                -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Denv=desktop
+                                -Dserver.port=8080
+                                --add-opens java.base/java.util=ALL-UNNAMED
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --add-opens java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED
                             </jvmArguments>
                         </configuration>
                     </plugin>
@@ -332,8 +344,13 @@
                         <configuration>
                             <moduleName>${desktop}</moduleName>
                             <launcherDir>${project.build.directory}/${project.build.finalName}</launcherDir>
+                            <classpathScope>test</classpathScope>
+                            <skipCompilation>false</skipCompilation>
+                            <draftCompile>true</draftCompile>
+                            <style>PRETTY</style>
+                            <forceCompilation>true</forceCompilation>
                             <jvmArgs>
-                                -Djakarta.xml.parsers.SAXParserFactory=org.apache.xerces.jaxp.SAXParserFactoryImpl
+                                -Djavax.xml.parsers.SAXParserFactory=org.apache.xerces.jaxp.SAXParserFactoryImpl
                             </jvmArgs>
                         </configuration>
                         <executions>
@@ -500,7 +517,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.47</version>
+            <version>8.0.33</version>
         </dependency>
         <dependency>
             <groupId>com.databasepreservation</groupId>
